[aiTradingCharts] fix identical prices in FE